Updated GitHub link in ul class icons
> Redirected the link from the GitHub homepage to personal GitHub page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <ul class="icons">
 									<li><a href="https://www.linkedin.com/in/benjamin-rea" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="http://www.twitter.com/benji_rea" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/benji-rea" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 									<li><a href="http://youtube.com/" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 									<li><a href="https://www.facebook.com/itsbenjirea" class="icon brands fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
 								</ul>
