--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 								<br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis daue libed vehiculaos ut ultric amet venenatis non, biorem mauris, fringil </p>
 
+								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
 
 						<!-- Work -->
