Updated intro to include role at Anderbell Studios
> added role title and link to anderbell website

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p><b>Qualifications and Certifications</b> BSc(Hons) Student in Computer Games Development, ILM Level 3 Award in Leadership and Management, 1st4sport Level 2 Award in Coaching Rugby Union, Certified Apple Teacher.</p>
+								<p><b>Qualifications and Certifications</b> BSc(Hons) Student in Computer Games Development, ILM Level 3 Award in Leadership and Management, 1st4sport Level 2 Award in Coaching Rugby Union, Certified Apple Teacher.
 
-								<br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis daue libed vehiculaos ut ultric amet venenatis non, biorem mauris, fringil </p>
+								<br><b>Lead Graphics Designer</b> at <a href="https://www.mousetrapped.co.uk/" target="_blank">Anderbell Studios.</a>
 
+								</p>
 								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
 
