--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 
 								<br><b>Young Rugby Ambassador</b> at <a href="https://www.englandrugby.com/" target=_blank">RFU England.</a>
 
-								
+								<br><b>BAFTA Young Games Designer Finalist 2019</b> working on <a href="https://www.mousetrapped.co.uk/pop_pixie" target=_blank">Pop Pixie</a> at <a href="https://www.mousetrapped.co.uk/" target="_blank">Anderbell Studios.</a>
 
+								
 								</p>
 								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
@@ -356,7 +357,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Benjamin Rea <a href="https://staffs.ac.uk">Staffordshire University</a>.</p>
+						<p class="copyright">&copy; Benjamin Rea <a href="https://staffs.ac.uk">Staffordshire University</a> 2019.</p>
 					</footer>
 
 			</div>
