Updated intro to include role at Bolthouse
> added role at bolthouse and link to website

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 								<br><b>BAFTA Young Games Designer Finalist 2019</b> working on <a href="https://www.mousetrapped.co.uk/pop_pixie" target=_blank">Pop Pixie</a> at <a href="https://www.mousetrapped.co.uk/" target="_blank">Anderbell Studios.</a>
 
-								
+								<br><b>	at <a href="http://bolthouse.co.uk/" target=_blank">Bolthouse Films.</a>
 								</p>
 								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
