--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 								<br><b>Young Rugby Ambassador</b> at <a href="https://www.englandrugby.com/" target=_blank">RFU England.</a>
 
-								<br><b>BAFTA Young Games Designer Finalist 2019</b> working on <a href="https://www.mousetrapped.co.uk/pop_pixie" target=_blank">Pop Pixie</a> at <a href="https://www.mousetrapped.co.uk/" target="_blank">Anderbell Studios.</a>
+								<br><b>BAFTA Young Games Designer Finalist 2019</b> .</a>
 
-								<br><b>	at <a href="http://bolthouse.co.uk/" target=_blank">Bolthouse Films.</a>
+								<br><b>Former Production Crew at <a href="http://bolthouse.co.uk/" target=_blank">Bolthouse Films.</a>
 								</p>
 								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
