--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p><b>Qualifications and Certifications</b> BSc(Hons) Student in Computer Games Development, ILM Level 3 Award in Leadership and Management, 1st4sport Level 2 Award in Coaching Rugby Union, Certified Apple Teacher.
 
-								<br><b>Lead Graphics Designer</b> at <a href="https://www.mousetrapped.co.uk/" target="_blank">Anderbell Studios.</a>
+								<br><b>Freelance Digital Artist</b> at <a href="http://blank.org//" target="_blank">Stingray Studios.</a>
 
 								<br><b>Young Rugby Ambassador</b> at <a href="https://www.englandrugby.com/" target=_blank">RFU England.</a>
 
