--- a/index.html
+++ b/index.html
@@ -69,8 +69,17 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p><b>Qualifications and Certifications</b> BSc(Hons) Student in Computer Games Development, ILM Level 3 Award in Leadership and Management, 1st4sport Level 2 Award in Coaching Rugby Union, Certified Apple Teacher.
+
+								<br><b>Freelance Digital Artist</b> at <a href="http://blank.org//" target="_blank">Stingray Studios.</a>
+
+								<br><b>Young Rugby Ambassador</b> at <a href="https://www.englandrugby.com/" target=_blank">RFU England.</a>
+
+								<br><b>BAFTA Young Games Designer Finalist 2019</b>.</a>
+
+								<br><b>Former Production Crew at <a href="http://bolthouse.co.uk/" target=_blank">Bolthouse Films.</a>
+								</p>
+								<img src="images/AppleTeacher_black.png" alt="Certified Apple Teacher" width="30%"/>
 							</article>
 
 						<!-- About -->
